example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: minikube.192.168.99.100.xip.io
   http:
     paths:
     - path: /*
       backend:
         serviceName: hello-minikube
         servicePort: 8080
 - host: hello.192.168.99.100.xip.io
   http:
     paths:
     - path: /*
       backend:
         serviceName: hello-node
         servicePort: 8080
